Closed
Bug 721497
Opened 14 years ago
Closed 13 years ago
Assertion failure: compartment mismatched, at ../jscntxtinlines.h:153 with dumpStack
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla15
People
(Reporter: decoder, Assigned: jorendorff)
References
Details
(Keywords: assertion, testcase)
Attachments
(1 file)
|
656 bytes,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
The following code asserts on mozilla-central revision edf8075b0333 (options -n -m -a):
var g = newGlobal('new-compartment');
var dbg = new Debugger(g);
dbg.onDebuggerStatement = function (frame) {
assertEq(dumpStack(), true);
};
g.eval("function f(a, [b, c], {x: [y], z: w}, {q}) { debugger; }");
g.eval("f(1, [2, 3], {x: [4], z: 5}, {q: 6});");
Not sure if this is really a bug, or just a problem because of "dumpStack". There are way too many shell builtins floating around in global namespace :(
Comment 1•14 years ago
|
||
(In reply to Christian Holler (:decoder) from comment #0)
> There are way too many shell builtins floating around in global namespace :(
Has anybody proposed making a Shell object (akin to the Math object)?
| Assignee | ||
Comment 2•13 years ago
|
||
Reduced:
var g = newGlobal('new-compartment');
g.f = function () { dumpStack(); };
g.eval("f();");
The comment on DumpStack in the source code says:
/*
* This shell function is temporary (used by testStackIter.js) and should be
* removed once JSD2 lands wholly subsumes the functionality here.
*/
JSD2 clearly isn't there yet, so I'll fix the bug. 2-line patch coming.
Summary: [jsdbg2] Assertion failure: compartment mismatched, at ../jscntxtinlines.h:153 → Assertion failure: compartment mismatched, at ../jscntxtinlines.h:153 with dumpStack
| Assignee | ||
Comment 3•13 years ago
|
||
Attachment #622037 -
Flags: review?(luke)
Comment 4•13 years ago
|
||
Comment on attachment 622037 [details] [diff] [review]
v1
wrap all the values!
Attachment #622037 -
Flags: review?(luke) → review+
| Assignee | ||
Comment 5•13 years ago
|
||
Comment 6•13 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/d8f95bbf161b
Should this have a test?
Flags: in-testsuite?
Target Milestone: --- → mozilla15
Updated•13 years ago
|
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 8•13 years ago
|
||
Automatically extracted testcase for this bug was committed:
https://hg.mozilla.org/mozilla-central/rev/efaf8960a929
Flags: in-testsuite? → in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•