Bug 721497 - Assertion failure: compartment mismatched, at ../jscntxtinlines.h:153 with dumpStack. r=luke.